--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ name = "parsec"
 path = "src/bin/main.rs"
 
 [dependencies]
-parsec-interface = "0.28.0"
+parsec-interface = "0.29.0"
 rand = { version = "0.8.3", features = ["small_rng"], optional = true }
 base64 = "0.21.0"
 threadpool = "1.8.1"
@@ -33,7 +33,7 @@ bincode = "1.3.1"
 structopt = { version = "0.3.26", default-features = false}
 derivative = "2.2.0"
 hex = { version = "0.4.2", optional = true }
-psa-crypto = { version = "0.10.0", default-features = false, features = ["operations"], optional = true }
+psa-crypto = { version = "0.11.0", default-features = false, features = ["operations","std"], optional = true }
 zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
 picky-asn1-x509 = { version = "0.12.0", optional = true }
 libc = "0.2.86"
