--- a/e2e_tests/Cargo.toml
+++ b/e2e_tests/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 
 [dependencies]
 serde = { version = "1.0.123", features = ["derive"] }
-parsec-client = { version = "0.16.0", features = ["testing", "spiffe-auth"] }
+parsec-client = { git = "https://github.com/gowthamsk-arm/parsec-client-rust.git", branch = "debug", features = ["testing", "spiffe-auth"] }
 log = "0.4.14"
 # Compatible version with crate rsa
 rand = "0.7.3"
